--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
